# open.mp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODING.md  README.md  artconfig.txt  build.ps1  format.bat  main.cpp  open.mp.sublime-project  open.mp.sublime-workspace  server.sln  test_vehicle.pwn  vs-chromium-project.txt
SDK/: .gitmodules  CMakeLists.txt  README.md  SDK.vcxproj  anim.hpp  class.hpp  component.hpp  core.hpp  cpp.hint  entity.hpp  events.hpp  exports.hpp  gtaquat.hpp  netcode.hpp  network.hpp  player.hpp  plugin.hpp  pool.hpp  sdk.hpp  types.hpp  values.hpp  vehicle.hpp  vehicle_colours.hpp  vehicle_components.hpp  vehicle_models.hpp  vehicle_params.hpp
SDK/NetCode/: actor.hpp  checkpoint.hpp  class.hpp  console.hpp  core.hpp  dialog.hpp  gangzone.hpp  menu.hpp  object.hpp  pickup.hpp  textdraw.hpp  textlabel.hpp  vehicle.hpp
SDK/Server/Components/Actors/: actors.hpp
SDK/Server/Components/Checkpoints/: checkpoints.hpp
SDK/Server/Components/Classes/: classes.hpp
SDK/include/: anim.hpp  component.hpp  core.hpp  entity.hpp  events.hpp  game_types.hpp  gtaquat.hpp  legacy_id_mapper.hpp  network.hpp  player.hpp  pool.hpp  sdk.hpp  types.hpp  utils.hpp  values.hpp
SDK/include/Impl/: events_impl.hpp  network_impl.hpp  pool_impl.hpp
Server/: CMakeLists.txt  pluginloader.hpp  server.cpp
Server/Components/: CMakeLists.txt
Server/Components/Actors/: actor.hpp  actors_main.cpp
Server/Components/CAPI/: CMakeLists.txt  main.cpp
Server/Components/Checkpoints/: checkpoint.hpp  dllmain.cpp
Server/Components/Classes/: CMakeLists.txt  classes_impl.hpp  classes_main.cpp  dllmain.cpp
Server/Components/Console/: cmd_handler.hpp  commands.cpp  console_impl.hpp  console_main.cpp
Server/Components/CustomModels/: CMakeLists.txt  crc32.hpp  models.cpp
Server/Components/Databases/: CMakeLists.txt  database_connection.cpp  database_connection.hpp  database_result_set.cpp  database_result_set.hpp  database_result_set_row.cpp  database_result_set_row.hpp  databases_component.cpp  databases_component.hpp
Server/Components/DatabasesTest/: CMakeLists.txt  databases_test_component.cpp  test.db
Server/Components/Dialogs/: CMakeLists.txt  dialog.cpp  dialog.hpp
Server/Components/Fixes/: fixes.cpp
Server/Components/GangZones/: gangzone.cpp  gangzone.hpp
Server/Components/LegacyConfig/: config_main.cpp
Server/Components/LegacyNetwork/: CMakeLists.txt  legacy_network_impl.cpp  legacy_network_impl.hpp  legacy_network_main.cpp
Server/Components/Menus/: menu.cpp  menu.hpp
Server/Components/NPCs/: CMakeLists.txt  npc.cpp  npc.hpp  npcs_impl.cpp  npcs_impl.hpp  npcs_main.cpp  npcs_main.hpp  utils.hpp
Server/Components/NPCs/NPC/: npc.cpp  (+1 more)
Server/Components/Objects/: object.cpp  object.hpp  objects_impl.hpp  objects_main.cpp
Server/Components/PacketTracker/: CMakeLists.txt  dllmain.cpp
Server/Components/Pawn/: CMakeLists.txt  Singleton.hpp  format.cpp  format.hpp  main.cpp  timers.cpp  timers.hpp  utils.hpp
Server/Components/PawnPlugin/: CMakeLists.txt  dllmain.cpp
Server/Components/Pickups/: pickup.cpp  pickup.hpp  pickups_main.cpp
Server/Components/PlayerDataConsumer/: dllmain.cpp
Server/Components/PlayerDataProvider/: dllmain.cpp  playerdata.hpp
Server/Components/PluginConsumer/: CMakeLists.txt  dllmain.cpp
Server/Components/PluginProvider/: dllmain.cpp  someplugin.hpp
Server/Components/RakNetLegacyNetwork/: CMakeLists.txt  dllmain.cpp  legacy_network_impl.cpp  legacy_network_impl.hpp  legacy_network_main.cpp
Server/Components/Recordings/: CMakeLists.txt  recordings_main.cpp
Server/Components/Rivershell/: CMakeLists.txt  rivershell.cpp
Server/Components/TestComponent/: dllmain.cpp
Server/Components/TextDraws/: textdraw.hpp  textdraws_main.cpp
Server/Components/TextLabels/: textlabel.hpp  textlabels_main.cpp
Server/Components/Timers/: timer.hpp  timers_main.cpp
Server/Components/Unicode/: CMakeLists.txt  unicode_main.cpp
Server/Components/Variables/: variables_main.cpp
Server/Components/Vehicles/: dllmain.cpp  vehicle.cpp  vehicle.hpp  vehicle_colours.hpp  vehicles_impl.hpp  vehicles_main.cpp
Server/Source/: CMakeLists.txt  component_loader.hpp  core_impl.hpp  entity_impl.hpp  exports_impl.cpp  legacy_network_impl.cpp  legacy_network_impl.hpp  network_impl.hpp  player.cpp  player_impl.hpp  player_pool.hpp  pluginloader.hpp  server.cpp  util.hpp  vehicle_impl.hpp
Server/impl/: class_impl.hpp  core_impl.hpp  entity_impl.hpp  events_impl.hpp  exports_impl.cpp  legacy_network_impl.cpp  legacy_network_impl.hpp  network_impl.hpp  player_impl.hpp
Shared/: CMakeLists.txt  bitstream.cpp  bitstream.hpp  netcode.hpp  packet.hpp
Shared/Encoding/: huffman_tree.cpp  huffman_tree.hpp  huffman_tree_node.hpp  linked_list.hpp  list.hpp  map.hpp  ordered_list.hpp  queue.hpp  str_compress.cpp  str_compress.hpp
Shared/NetCode/: CMakeLists.txt  actor.hpp  checkpoint.hpp  class.hpp  console.hpp  core.hpp  custommodels.hpp  dialog.hpp  gangzone.hpp  menu.hpp  netcode.hpp  object.hpp  pickup.hpp  textdraw.hpp  textlabel.hpp  vehicle.hpp
Shared/Network/: CMakeLists.txt  LICENSE.md  README.md  bitstream.cpp  bitstream.hpp  packet.hpp
SimplePlugin/: CMakeLists.txt  SimplePlugin.cpp  SimplePlugin.vcxproj  cpp.hint
Tools/abi-check/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/RakNet/: CMakeLists.txt  README.md  RakNet.vcxproj  SAMPRakNet.cpp  SAMPRakNet.hpp  readme.txt
lib/RakNet/Source/: BitStream.cpp  CheckSum.cpp  CommandParserInterface.cpp  ConsoleServer.cpp  DS_HuffmanEncodingTree.cpp  DataBlockEncryptor.cpp  GetTime.cpp  InternalPacketPool.cpp  Makefile  Makefile.am  NetworkTypes.cpp  PluginInterface.cpp  RPCMap.cpp  RakClient.cpp  RakNetCommandParser.cpp  RakNetworkFactory.cpp  RakPeer.cpp  RakSleep.cpp  Rand.cpp  ReliabilityLayer.cpp  SHA1.cpp  SimpleMutex.cpp  SocketLayer.cpp  StringCompressor.cpp  StringTable.cpp  _findfirst.cpp  rakserver.cpp  rijndael.cpp
lib/pawn-natives/: CMakeLists.txt  NativeFunc.hpp  NativeImport.hpp  NativesMain.hpp  README.md  test.cpp
lib/pawn-natives/Internal/: NativeCast.hpp
(+255 files in other folders)
