if(CMAKE_SIZEOF_VOID_P EQUAL 4)
	add_subdirectory(Pawn)
endif()
add_subdirectory(Classes)
add_subdirectory(RakNetLegacyNetwork)
add_subdirectory(Vehicles)
add_subdirectory(Checkpoints)
add_subdirectory(Pickups)
add_subdirectory(Objects)
add_subdirectory(TextLabels)
add_subdirectory(TextDraws)
add_subdirectory(Actors)
add_subdirectory(Menus)
add_subdirectory(Variables)
add_subdirectory(Dialogs)
add_subdirectory(Console)
add_subdirectory(GangZones)
add_subdirectory(Timers)

add_subdirectory(TestComponent)
#add_subdirectory(Rivershell)